--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,5 @@
 [global_config]
-company_name = Nerobuild
+title = Nerobuild
+description = At Nerobuild, we are committed to providing you with a reliable and seamless experience when interacting with our APIs. Our API Status Page is designed to keep you informed about the current health and performance of our API services.
 api_ping_frequency_seconds = 10
 notification_email_address = adebisiayomide07@gmail.com
