--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -6,6 +6,6 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 
-EXPOSE 5000
+EXPOSE 5001
 
-CMD [ "python", "src/app.py"]
+CMD [ "python", "app.py"]
