--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          cd api/
+          cd src/
           docker build -t alsaheem/api-status-maker .
 
       - name: Login to Docker Hub
