--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,6 +6,9 @@ charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.0
 Flask-APScheduler==1.13.1
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
+python-dotenv==1.0.1
 idna==3.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -14,6 +17,9 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
+SQLAlchemy==2.0.27
 tzlocal==5.2
 urllib3==2.1.0
 Werkzeug==3.0.1
+plotly==5.18.0
+pandas==2.2.0
