--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build Docker image
         run: |
           cd src/
-          docker build -t alsaheem/api-status-checker .
+          docker build -t alsaheem/api-status-checker:$SHA .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
