--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -35,7 +35,7 @@ spec:
         - name: config-volume
           mountPath: /app/config
         - name: sqlite-data
-          mountPath: /app/instance
+          mountPath: /app/database
         livenessProbe:
           httpGet:
             path: /
