--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -1,8 +1,10 @@
 [global_config]
-title = Nerobuild
-description = At Nerobuild, we are committed to providing you with a reliable and seamless experience when interacting with our APIs. Our API Status Page is designed to keep you informed about the current health and performance of our API services.
+title = Sample Company Name
+description = At Sample Company Name, we are committed to providing you with a reliable and seamless experience when interacting with our APIs. Our API Status Page is designed to keep you informed about the current health and performance of our API services.
+environment = Development
+logo = 
 api_ping_frequency_seconds = 30
-notification_email_address = adebisiayomide07@gmail.com
+notification_email_address = samplecompanyname@example.com
 default_theme = light
 mask_api_urls = true
 
