--- a/src/config/config.ini.example
+++ b/src/config/config.ini.example
@@ -2,6 +2,8 @@
 # Application title and description
 title = Your Company Name
 description = Your company description here
+environment = Production
+logo = https://example.com/logo.png
 
 # Monitoring settings
 api_ping_frequency_seconds = 30
