--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'
 
 jobs:
   build:
@@ -45,3 +47,41 @@ jobs:
           docker push alsaheem/api-status-checker:${{ steps.short-sha.outputs.sha }}
           docker push alsaheem/api-status-checker:${{ steps.version.outputs.version }}
           docker push alsaheem/api-status-checker:latest
+
+  helm-package:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Read version from VERSION file
+        id: version
+        run: |
+          VERSION=$(cat VERSION | tr -d '[:space:]')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Packaging chart version: $VERSION"
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v4
+
+      - name: Lint Helm chart
+        run: |
+          helm lint helm/api-status-maker
+
+      - name: Package Helm chart
+        run: |
+          helm package helm/api-status-maker --destination helm/packaged
+          ls -l helm/packaged
+
+      - name: Upload chart to GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            helm/packaged/api-status-maker-*.tgz
+          tag_name: ${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
