--- a/helm/api-status-maker/templates/configmap.yaml
+++ b/helm/api-status-maker/templates/configmap.yaml
@@ -7,18 +7,18 @@ metadata:
 data:
   config.ini: |
     [global_config]
-    title = {{ .Values.config.global.title | quote }}
-    description = {{ .Values.config.global.description | quote }}
-    environment = {{ .Values.config.global.environment | quote }}
-    logo = {{ .Values.config.global.logo | quote }}
+    title = {{ .Values.config.global.title }}
+    description = {{ .Values.config.global.description }}
+    environment = {{ .Values.config.global.environment }}
+    logo = {{ .Values.config.global.logo }}
     api_ping_frequency_seconds = {{ .Values.config.global.api_ping_frequency_seconds }}
-    notification_email_address = {{ .Values.config.global.notification_email_address | quote }}
-    default_theme = {{ .Values.config.global.default_theme | quote }}
+    notification_email_address = {{ .Values.config.global.notification_email_address }}
+    default_theme = {{ .Values.config.global.default_theme }}
     mask_api_urls = {{ ternary "true" "false" .Values.config.global.mask_api_urls }}
 
     {{- range .Values.config.apis }}
     [{{ .name }}]
-    api_name = {{ .api_name | quote }}
-    api_url = {{ .api_url | quote }}
+    api_name = {{ .api_name }}
+    api_url = {{ .api_url }}
     {{- end }}
 
