--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -53,4 +53,5 @@ spec:
         configMap:
           name: api-status-config
       - name: sqlite-data
-        emptyDir: {} 
+        persistentVolumeClaim:
+          claimName: api-status-maker-pvc
