--- a/helm/api-status-maker/templates/deployment.yaml
+++ b/helm/api-status-maker/templates/deployment.yaml
@@ -46,5 +46,10 @@ spec:
           configMap:
             name: {{ include "api-status-maker.fullname" . }}-config
         - name: sqlite-data
+{{- if .Values.persistence.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ include "api-status-maker.fullname" . }}-pvc
+{{- else }}
           emptyDir: {}
+{{- end }}
 
